--- a/stable/redis/templates/svc.yaml
+++ b/stable/redis/templates/svc.yaml
@@ -24,5 +24,10 @@ spec:
   - name: redis
     port: 6379
     targetPort: redis
+  {{- if .Values.metrics.enabled }}
+  - name: metrics
+    port: 9121
+    targetPort: metrics
+  {{- end }}
   selector:
     app: {{ template "redis.fullname" . }}
