--- a/stable/traefik/templates/configmap.yaml
+++ b/stable/traefik/templates/configmap.yaml
@@ -23,9 +23,14 @@ data:
       [entryPoints.http]
       address = ":80"
       compress = {{ .Values.gzip.enabled }}
-        {{- if and .Values.ssl.enabled .Values.ssl.enforced }}
+        {{- if .Values.ssl.enforced }}
         [entryPoints.http.redirect]
+          {{- if .Values.ssl.enabled }}
           entryPoint = "https"
+          {{- else }}
+          regex = "^http://(.*)"
+          replacement = "https://$1"
+          {{- end }}
         {{- end }}
       {{- if .Values.ssl.enabled }}
       [entryPoints.https]
