--- a/incubator/busbar/templates/deployment.yaml
+++ b/incubator/busbar/templates/deployment.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: {{ template "busbar.fullname" . }}-web
@@ -48,7 +48,7 @@ spec:
 {{ toYaml .Values.busbar.web.resources | indent 10 }}
 
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: {{ template "busbar.fullname" . }}-worker
@@ -98,7 +98,7 @@ spec:
 
 ---
 kind: Deployment
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta1
 metadata:
   name: {{ template "kubeRegistry.fullname" . }}-external
   labels:
@@ -141,7 +141,7 @@ spec:
 
 ---
 kind: Deployment
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta1
 metadata:
   name: {{ template "kubeConfig.fullname" . }}
   labels:
