Move busbar Image to be a set value instead a hardcoded entry on the deployment file

--- a/incubator/busbar/values.yaml
+++ b/incubator/busbar/values.yaml
@@ -2,7 +2,7 @@
 ##
 
 ## Busbar Base Images Images
-busbarDockerRegistry: busbario
+busbarDockerImage: busbario/busbar
 busbarDockerTag: latest
 
 ## Cluster Name
