--- a/incubator/busbar/templates/deployment.yaml
+++ b/incubator/busbar/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: {{ template "busbar.fullname" . }}-web
-        image: {{ .Values.busbarDockerRegistry }}/busbar:{{ .Values.busbarDockerTag }}
+        image: {{ .Values.busbarDockerImage }}:{{ .Values.busbarDockerTag }}
         imagePullPolicy: Always
         command:
         - /bin/sh
@@ -66,7 +66,7 @@ spec:
     spec:
       containers:
       - name: {{ template "busbar.fullname" . }}-worker
-        image: {{ .Values.busbarDockerRegistry }}/busbar:{{ .Values.busbarDockerTag }}
+        image: {{ .Values.busbarDockerImage }}:{{ .Values.busbarDockerTag }}
         imagePullPolicy: Always
         command:
         - /bin/sh
