Add release label to selectors

--- a/incubator/busbar/templates/deployment.yaml
+++ b/incubator/busbar/templates/deployment.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: {{ template "busbar.name" . }}-web
+        release: "{{ .Release.Name }}"
         component: web
     spec:
       containers:
@@ -62,6 +63,7 @@ spec:
     metadata:
       labels:
         app: {{ template "busbar.name" . }}-worker
+        release: "{{ .Release.Name }}"
         component: worker
     spec:
       containers:
