--- a/stable/sonarqube/templates/deployment.yaml
+++ b/stable/sonarqube/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       {{- if .Values.plugins.install }}
       initContainers:
         - name: install-plugins
-          image: openjdk:8
+          image: joosthofman/wget:1.0
           env:
             {{- range $key, $value := .Values.extraEnv }}
             - name: {{ $key }}
