Changes requested by reviewer
Notable changes:
* Added "toplevel" templates used for consistency of certain generated names
* RBAC- and image-related values are structured differently
* Service name and service account name are no longer required
* containerPort is no longer configurable
* Superfluous conditionals and calls to `required` removed
* Ports are named
* Whitespace cleanup throughout

--- a/stable/weave-scope/charts/weave-scope-agent/templates/clusterrole.yaml
+++ b/stable/weave-scope/charts/weave-scope-agent/templates/clusterrole.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.rbac }}
 {{- if .Values.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
@@ -6,7 +5,7 @@ metadata:
   labels:
     {{- include "weave-scope.helm_std_labels" . | indent 4 }}
     component: agent
-  name: weave-scope
+  name: {{ .Values.rbac.serviceAccountName | default (include "toplevel.fullname" .) }} 
   annotations:
     {{- include "weave-scope.annotations" . | indent 4 }}
 rules:
@@ -20,5 +19,4 @@ rules:
       - '*'
     verbs:
       - '*'
-{{- end }}
 {{- end }}
