--- a/stable/weave-scope/charts/weave-scope-agent/templates/serviceaccount.yaml
+++ b/stable/weave-scope/charts/weave-scope-agent/templates/serviceaccount.yaml
@@ -1,13 +1,11 @@
-{{- if .Values.rbac }}
-{{- if .Values.rbac.serviceAccountName }}
+{{- if .Values.rbac.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
     {{- include "weave-scope.helm_std_labels" . | indent 4 }}
     component: agent
-  name: {{ .Values.rbac.serviceAccountName }}
+  name: {{ .Values.rbac.serviceAccountName | default (include "toplevel.fullname" .) }}
   annotations:
     {{- include "weave-scope.annotations" . | indent 4 }}
-{{- end }}
 {{- end }}
