--- a/stable/weave-scope/charts/weave-scope-frontend/templates/deployment.yaml
+++ b/stable/weave-scope/charts/weave-scope-frontend/templates/deployment.yaml
@@ -2,39 +2,33 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   labels:
-    {{- include "weave-scope.helm_std_labels" . | indent 4 }}
+    {{- include "weave-scope-frontend.helm_std_labels" . | indent 4 }}
     component: frontend
-  name: {{ template "weave-scope.fullname" . }}-app
+  name: {{ template "weave-scope-frontend.fullname" . }}
   annotations:
     {{- include "weave-scope.annotations" . | indent 4 }}
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: {{ template "weave-scope.name" . }}
+      app: {{ template "toplevel.name" . }}
       release: {{ .Release.Name }}
       component: frontend
   template:
     metadata:
       labels:
-        {{- include "weave-scope.helm_std_labels" . | indent 8 }}
+        {{- include "weave-scope-frontend.helm_std_labels" . | indent 8 }}
         component: frontend
     spec:
       containers:
-        - name: app
-          image: {{ required "You must specify the desired container image" .Values.global.image }}:{{ required "You must specify the desired container image tag" .Values.global.imageTag }}
-          {{- if .Values.imagePullPolicy }}
-          imagePullPolicy: {{ .Values.imagePullPolicy | quote }}
-          {{- end }}
+        - name: {{ template "weave-scope-frontend.name" . }}
+          image: "{{ .Values.global.image.repository }}:{{ .Values.global.image.tag }}"
+          imagePullPolicy: "{{ .Values.global.image.pullPolicy }}"
           args:
             - "--no-probe"
-          {{- if ne (int .Values.containerPort) 4040 }}
-            - "--app.http.address=:{{ .Values.containerPort }}"
-          {{- end }}
           ports:
-            - containerPort: {{ required "You must specify the port the frontend container opens" .Values.containerPort }}
+            - name: http
+              containerPort: 4040
               protocol: TCP
-          {{- if .Values.resources }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
-          {{- end }}
-  replicas: 1
