--- a/incubator/gocd/templates/gocd-server-deployment.yaml
+++ b/incubator/gocd/templates/gocd-server-deployment.yaml
@@ -1,34 +1,37 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ template "gocd.name" . }}-server-deployment
+  name: {{ template "gocd.fullname" . }}-server
   labels:
-    app: {{ template "gocd.name" . }}-server
-    chart: "{{ template "gocd.name" . }}-{{ .Chart.Version }}"
+    app: {{ template "gocd.name" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
-    role: server
+    component: server
 spec:
   {{- if le .Values.server.replicaCount 1.0 }}
   replicas: {{ .Values.server.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      app: {{ template "gocd.name" . }}-server
+      app: {{ template "gocd.name" . }}
+      release: {{ .Release.Name | quote }}
+      component: server
   template:
     metadata:
       labels:
-        app: {{ template "gocd.name" . }}-server
-        role: server
+        app: {{ template "gocd.name" . }}
+        release: {{ .Release.Name | quote }}
+        component: server
     spec:
       {{- if .Values.server.persistence.enabled }}
       volumes:
         - name: godata-vol
           persistentVolumeClaim:
-            claimName: {{ .Values.server.persistence.godata.name }}
+            claimName: {{ template "gocd.fullname" . }}-data
         - name: homego-vol
           persistentVolumeClaim:
-            claimName: {{ .Values.server.persistence.homego.name }}
+           claimName: {{ template "gocd.fullname" . }}-home
       {{- end }}
       containers:
         - name: {{ template "gocd.name" . }}-server
