--- a/incubator/gocd/templates/service.yaml
+++ b/incubator/gocd/templates/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "gocd.name" . }}-server-service
+  name: {{ template "gocd.fullname" . }}-server
   labels:
-    app: {{ template "gocd.name" . }}-server
-    chart: "{{ template "gocd.name" . }}-{{ .Chart.Version }}"
+    app: {{ template "gocd.name" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
-    role: server
+    component: server
 spec:
   type: {{ .Values.server.service.type }}
   ports:
@@ -27,5 +27,6 @@ spec:
       protocol: TCP
       name: https
   selector:
-    app: {{ template "gocd.name" . }}-server
-    role: server
+    app: {{ template "gocd.name" . }}
+    release: {{ .Release.Name | quote }}
+    component: server
