--- a/incubator/gocd/templates/tests/gocd-test.yaml
+++ b/incubator/gocd/templates/tests/gocd-test.yaml
@@ -1,7 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ template "gocd.name" . }}-test-{{ randAlphaNum 5 | lower }}"
+  name: "{{ template "gocd.fullname" . }}-test-{{ randAlphaNum 5 | lower }}"
+  labels:
+    app: {{ template "gocd.name" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
   annotations:
     "helm.sh/hook": test-success
 spec:
