--- a/incubator/gocd/values.yaml
+++ b/incubator/gocd/values.yaml
@@ -53,30 +53,32 @@ server:
     nodeHttpsPort:
   ingress:
     # server.ingress.enabled is the toggle to enable GoCD Server Ingress
-    enabled: false
+    enabled: true
     # server.ingress.hosts is used to create an Ingress record.
-  #  hosts:
-  #    - foo.go.cd
+    hosts:
+      - foo.go.cd
 
   persistence:
     # server.persistence.enabled is the toggle for sever volume persistence. Change to true if a persistent volume is available and configured manually.
-    enabled: false
+    enabled: true
     # server.persistence.godata is the GoCD server `/godata` volume configuration
     godata:
-      pvName: "godata-gocd-server"
-      name: "godata-pvc"
       accessMode: "ReadWriteOnce"
       size: 1Gi
       storageClass:
       ExistingClaim:
+      pvSelector:
+#        matchLabels:
+#          volume-type: ssd
     # server.persistence.homego is the GoCD server `/home/go` volume configuration
     homego:
-      pvName: "homego-gocd-server"
-      name: "homego-pvc"
       accessMode: "ReadWriteOnce"
       size: 1Gi
       storageClass:
       ExistingClaim:
+      pvSelector:
+#        matchLabels:
+#          volume-type: ssd
 
 agent:
   # agent.replicaCount is the GoCD Agent replicas Count. Specify the number of GoCD agents to run
@@ -110,12 +112,13 @@ agent:
     enabled: false
      # server.persistence.homego is the GoCD agent `/home/go` volume configuration
     homego:
-      pvName: "gocd-agent"
-      name: "homego-agent-pvc"
       accessMode: "ReadWriteOnce"
       size: 1Gi
       storageClass:
       ExistingClaim:
+      pvSelector:
+#        matchLabels:
+#          volume-type: ssd
 
   healthCheck:
    # agent.healthCheck.enable is the toggle for GoCD agent health checks
