change rbac.create default value to 'true'

--- a/stable/datadog/values.yaml
+++ b/stable/datadog/values.yaml
@@ -149,9 +149,8 @@ datadog:
 
 rbac:
   ## If true, create & use RBAC resources
-  create: false
+  create: true
 
-  ## Set to existing service account
   ## Ignored if rbac.create is true
   serviceAccountName: default
 
