--- a/stable/datadog/values.yaml
+++ b/stable/datadog/values.yaml
@@ -146,3 +146,12 @@ datadog:
     limits:
       cpu: 256m
       memory: 512Mi
+
+rbac:
+  ## If true, create & use RBAC resources
+  create: true
+
+  ## Ignored if rbac.create is true
+  serviceAccountName: default
+
+tolerations: []
