--- a/stable/aerospike/Chart.yaml
+++ b/stable/aerospike/Chart.yaml
@@ -9,3 +9,6 @@ version: 0.1.5
 icon: https://s3-us-west-1.amazonaws.com/aerospike-fd/wp-content/uploads/2016/06/Aerospike_square_logo.png
 sources:
 - https://github.com/aerospike/aerospike-server
+maintainers:
+- name: Kaveh Mousavi Zamani
+  email: k.mousavizamani@travelaudience.com
