--- a/stable/aerospike/templates/configmap.yaml
+++ b/stable/aerospike/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "aerospike.fullname" . }}
 data:
   aerospike.conf: |
     # aerospike configuration
