--- a/stable/aerospike/templates/mesh-service.yaml
+++ b/stable/aerospike/templates/mesh-service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}-mesh
+  name: {{ template "aerospike.fullname" . }}-mesh
   labels:
-    app: {{ template "name" . }}
+    app: {{ template "aerospike.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -20,5 +20,5 @@ spec:
       protocol: TCP
       name: aerospike-mesh
   selector:
-    app: {{ template "name" . }}
+    app: {{ template "aerospike.name" . }}
     release: {{ .Release.Name }}
