--- a/stable/aerospike/templates/configmap.yaml
+++ b/stable/aerospike/templates/configmap.yaml
@@ -2,6 +2,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "aerospike.fullname" . }}
+  labels:
+    app: {{ template "aerospike.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 data:
   aerospike.conf: |
     # aerospike configuration
