add optional service annotations to nexus chart

--- a/stable/sonatype-nexus/values.yaml
+++ b/stable/sonatype-nexus/values.yaml
@@ -17,6 +17,8 @@ service:
   livenessProbe:
     initialDelaySeconds: 30
     periodSeconds: 30
+  annotations:
+  # foo.io/bar: "true"
 ingress:
   enabled: false
   # Used to create an Ingress record.
