Revert "use {{ .Release.Name }} for resource naming"
This reverts commit 518ad934b66ec2f39218615539d8fb41bb8e23d5.

--- a/stable/prometheus-to-sd/templates/deployment.yaml
+++ b/stable/prometheus-to-sd/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ template "prometheus-to-sd.fullname" . }}
   labels:
     app: {{ template "prometheus-to-sd.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
