--- a/stable/prometheus-to-sd/templates/deployment.yaml
+++ b/stable/prometheus-to-sd/templates/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: {{ template "prometheus-to-sd.fullname" . }}
