add app description   which provide app abstract for project dashboard

--- a/stable/artifactory/templates/artifactory-deployment.yaml
+++ b/stable/artifactory/templates/artifactory-deployment.yaml
@@ -8,6 +8,8 @@ metadata:
     component: "{{ .Values.artifactory.name }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
+  annotations:
+    description: {{ .Chart.Description }}
 spec:
   replicas: {{ .Values.artReplicaCount }}
   template:
