add app description   which provide app abstract for project dashboard

--- a/stable/aws-cluster-autoscaler/templates/deployment.yaml
+++ b/stable/aws-cluster-autoscaler/templates/deployment.yaml
@@ -7,6 +7,8 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   name: {{ template "fullname" . }}
+  annotations:
+    description: {{ .Chart.Description }}
 spec:
   replicas: {{ .Values.replicaCount }}
   template:
