add app description   which provide app abstract for project dashboard

--- a/stable/cockroachdb/templates/cockroachdb-statefulset.yaml
+++ b/stable/cockroachdb/templates/cockroachdb-statefulset.yaml
@@ -9,6 +9,8 @@ metadata:
     release: {{ .Release.Name | quote }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     component: "{{ .Release.Name }}-{{ .Values.Component }}"
+  annotations:
+    description: {{ .Chart.Description }}
 spec:
   ports:
   # The main port, served by gRPC, serves Postgres-flavor SQL, internode
