--- a/stable/coscale/templates/daemonset.yaml
+++ b/stable/coscale/templates/daemonset.yaml
@@ -8,6 +8,8 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
+  annotations:
+    description: {{ .Chart.Description }}
 spec:
   template:
     metadata:
