add app description   which provide app abstract for project dashboard

--- a/stable/coredns/templates/deployment.yaml
+++ b/stable/coredns/templates/deployment.yaml
@@ -13,6 +13,8 @@ metadata:
     {{- else }}
     app: {{ template "coredns.fullname" . }}
     {{- end }}
+  annotations:
+    description: {{ .Chart.Description }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
