--- a/stable/kube-state-metrics/Chart.yaml
+++ b/stable/kube-state-metrics/Chart.yaml
@@ -5,11 +5,13 @@ keywords:
 - metric
 - monitoring
 - prometheus
-version: 0.3.1
-appVersion: 1.0.1
+version: 0.3.2
+appVersion: 1.0.2
 home: https://github.com/kubernetes/kube-state-metrics/
 sources:
 - https://github.com/kubernetes/kube-state-metrics/
 maintainers:
 - name: Jose Armesto
   email: jose@armesto.net
+- name: zouyee
+  email: zouyee1989@gmail.com
