--- a/stable/centrifugo/templates/deployment.yaml
+++ b/stable/centrifugo/templates/deployment.yaml
@@ -7,6 +7,8 @@ metadata:
     release: {{ .Release.Name }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     app: {{ template "centrifugo.name" . }}
+  annotations:
+    description: {{ .Chart.Description }}
 spec:
   replicas: {{ .Values.replicaCount }}
   strategy:
