Add option to configure docker-registry with yaml

--- a/incubator/docker-registry/values.yaml
+++ b/incubator/docker-registry/values.yaml
@@ -24,3 +24,24 @@ persistentVolume:
   ##
   storageClass: "-"
   annotations: {}
+
+registry:
+  configData:
+    version: 0.1
+    log:
+      fields:
+        service: registry
+    storage:
+      cache:
+        blobdescriptor: inmemory
+      filesystem:
+        rootdirectory: /var/lib/registry
+    http:
+      addr: :4000
+      headers:
+        X-Content-Type-Options: [nosniff]
+    health:
+      storagedriver:
+        enabled: true
+        interval: 10s
+        threshold: 3
