--- a/stable/consul/templates/consul.yaml
+++ b/stable/consul/templates/consul.yaml
@@ -25,6 +25,18 @@ spec:
   type: "{{ .Values.uiService.type }}"
 {{- end }}
 ---
+{{- if .Values.maxUnavailable }}
+apiVersion: policy/v1beta1
+kind: PodDisruptionBudget
+metadata:
+  name: "{{ template "fullname" . }}-pdb"
+spec:
+  maxUnavailable: {{ .Values.maxUnavailable }}
+  selector:
+    matchLabels:
+      component: "{{ .Release.Name }}-{{ .Values.Component }}"
+{{- end }}
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -77,6 +89,8 @@ metadata:
 spec:
   serviceName: "{{ template "fullname" . }}"
   replicas: {{ default 3 .Values.Replicas }}
+  updateStrategy:
+    type: RollingUpdate
   template:
     metadata:
       name: "{{ template "fullname" . }}"
@@ -88,6 +102,31 @@ spec:
     spec:
       securityContext:
         fsGroup: 1000
+      {{- if eq .Values.antiAffinity "hard" }}
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: component
+                operator: In
+                values:
+                - "{{ .Release.Name }}-{{ .Values.Component }}"
+            topologyKey: kubernetes.io/hostname
+      {{- else if eq .Values.antiAffinity "soft" }}
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 1
+            podAffinityTerm:
+              topologyKey: kubernetes.io/hostname
+              labelSelector:
+                matchExpressions:
+                - key: component
+                  operator: In
+                  values:
+                  - "{{ .Release.Name }}-{{ .Values.Component }}"
+      {{- end }}
       containers:
       - name: "{{ template "fullname" . }}"
         image: "{{ .Values.Image }}:{{ .Values.ImageTag }}"
