--- a/stable/stack2slack/values.yaml
+++ b/stable/stack2slack/values.yaml
@@ -6,5 +6,5 @@ tagToChannel:
 stackSite: 'stackoverflow'
 image:
   repository: dunglas/stack2slack
-  tag: latest
+  tag: 0.1.0
   pullPolicy: IfNotPresent
