Namespaced templates. Fix maintainers YAML.

--- a/stable/stack2slack/Chart.yaml
+++ b/stable/stack2slack/Chart.yaml
@@ -6,4 +6,5 @@ appVersion: 0.1.0
 sources:
 - https://github.com/dunglas/stack2slack
 maintainers:
-- dunglas
+- name: dunglas
+  email: dunglas@gmail.com
