--- a/stable/stack2slack/templates/configmap.yaml
+++ b/stable/stack2slack/templates/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "stack2slack.fullname" . }}
   labels:
-    app: {{ template "name" . }}
+    app: {{ template "stack2slack.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
