--- a/stable/ibex-dashboard/templates/pvc.yaml
+++ b/stable/ibex-dashboard/templates/pvc.yaml
@@ -2,7 +2,12 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ .Values.persistence.claimName }}
+  name: {{ template "ibexdashboard.fullname" . }}
+  labels:
+    app: {{ template "ibexdashboard.fullname" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 spec:
   accessModes:
     - {{ .Values.persistence.accessMode | quote }}
