Neo4j: add sidecar container option for core pod
This allows the configuration of additional containers in the core pod, which can
handle situations such as identifying and labeling leaders in the core pod
when using the HTTP API, which can then be surfaced via HTTP.

--- a/stable/neo4j/templates/core-statefulset.yaml
+++ b/stable/neo4j/templates/core-statefulset.yaml
@@ -74,6 +74,9 @@ spec:
           subPath: "{{ .Values.core.persistentVolume.subPath }}"
         resources:
 {{ toYaml .Values.resources | indent 10 }}
+{{- if .Values.core.sidecarContainers }}
+{{ toYaml .Values.core.sidecarContainers | indent 6}}
+{{- end }}
 
   volumeClaimTemplates:
     - metadata:
