--- a/stable/neo4j/values.yaml
+++ b/stable/neo4j/values.yaml
@@ -55,6 +55,11 @@ core:
     # - name: EXTRA_VAR_2
     #   value: extra-var-value-2
 
+    sidecarContainers: {}
+    ## Additional containers to be added to the Neo4j core pod.
+    #  - name: my-sidecar
+    #    image: nginx:latest
+
 # Read Replicas
 readReplica:
   numberOfServers: 0
