neo4j: add matchLabels with subset of labels for deployments
This was missing from statefulset and readreplicas deployments. This can result in some weirdness when
updating deployments:
https://github.com/kubernetes/helm/issues/1844

Additionally, these will _not_ be added by default in apps/v1beta2 and is recommended as a best practise
https://github.com/kubernetes/helm/blob/master/docs/chart_best_practices/pods.md.

--- a/stable/neo4j/templates/core-statefulset.yaml
+++ b/stable/neo4j/templates/core-statefulset.yaml
@@ -4,6 +4,10 @@ metadata:
   name: "{{ template "neo4j.core.fullname" . }}"
 spec:
   serviceName: {{ template "neo4j.fullname" . }}
+  selector:
+    matchLabels:
+      app: {{ template "neo4j.name" . }}
+      component: core
   replicas: {{ .Values.core.numberOfServers }}
   template:
     metadata:
