--- a/stable/neo4j/templates/readreplicas-deployment.yaml
+++ b/stable/neo4j/templates/readreplicas-deployment.yaml
@@ -9,6 +9,10 @@ metadata:
     app: {{ template "neo4j.name" . }}
     component: replica
 spec:
+  selector:
+    matchLabels:
+      app: {{ template "neo4j.name" . }}
+      component: replica
   replicas: {{ .Values.readReplica.numberOfServers }}
   template:
     metadata:
