fixed linting errors

--- a/stable/ibex-dashboard/values.yaml
+++ b/stable/ibex-dashboard/values.yaml
@@ -53,7 +53,8 @@ persistence:
   # existingClassName: false
   # storageClass: slow
   ## Azure sample settings for storage
-  # storage:
+  storage:
+    provisionerEnabled: false
     # provisioner: kubernetes.io/azure-disk
     # parameters:
       # skuName: Standard_LRS
