--- a/stable/ibex-dashboard/templates/storageclass.yaml
+++ b/stable/ibex-dashboard/templates/storageclass.yaml
@@ -3,7 +3,11 @@ kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
  name: "{{ .Values.persistence.storageClass }}"
+{{- if .Values.persistence.storage.provisionerEnabled }}
 provisioner: {{ .Values.persistence.storage.provisioner }}
+{{- else }}
+provisioner: ""
+{{- end }}
 parameters:
   {{- range $key, $value := .Values.persistence.storage.parameters }}
     {{ $key }}: {{ $value }}
