[incubator/patroni] fix svc to being headless
This seems reqired in kubenetes 1.8 and should also include previous releases.

Ref: https://kubernetes.io/docs/concepts/services-networking/service/#headless-services
Ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#components

--- a/incubator/patroni/templates/svc-patroni.yaml
+++ b/incubator/patroni/templates/svc-patroni.yaml
@@ -9,6 +9,9 @@ metadata:
     component: "{{ .Release.Name }}-{{ .Values.Component }}"
 spec:
   type: ClusterIP
+  clusterIP: None
   ports:
   - port: 5432
     targetPort: 5432
+  selector:
+    component: "{{ .Release.Name }}-{{ .Values.Component }}"
