--- a/stable/traefik/values.yaml
+++ b/stable/traefik/values.yaml
@@ -20,7 +20,7 @@ tolerations: []
 #   value: "value"
 #   effect: "NoSchedule|PreferNoSchedule|NoExecute(1.6 only)"
 ## Kubernetes ingress filters
-kubernetes: {}
+# kubernetes:
   # namespaces:
   # - default
   # labelSelector:
