--- a/stable/traefik/values.yaml
+++ b/stable/traefik/values.yaml
@@ -19,6 +19,11 @@ tolerations: []
 #   operator: "Equal|Exists"
 #   value: "value"
 #   effect: "NoSchedule|PreferNoSchedule|NoExecute(1.6 only)"
+proxyProtocol:
+  enabled: false
+  # trustedIPs is required when enabled
+  trustedIPs:
+  - 10.0.0.0/8
 ssl:
   enabled: false
   enforced: false
