Configure a headless service
This configuration is necessary to ensure that the individual Pods
have well-defined hostnames that are discoverable via DNS.

--- a/incubator/couchdb/templates/service.yaml
+++ b/incubator/couchdb/templates/service.yaml
@@ -8,7 +8,7 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
-  type: {{ .Values.service.type }}
+  clusterIP: None
   ports:
     - port: {{ .Values.service.externalPort }}
       targetPort: {{ .Values.service.internalPort }}
